namespace java net.lab1318.costume.api.services.user
namespace * costume.api.services.user

exception DuplicateUserBookmarkException {
	// validation {"minLength": 1}
	string cause_message;
}
